syntax = "proto3";
package WSForward;

enum TransportDataType {
	CONTROL = 0;
	REQUEST = 1;
	RESPONSE = 2;
	SUBPACKAGE = 3;
	STREAM_SUBPACKAGE = 4;
	TCP_CONNECT = 5;
	TCP_MESSAGE = 6;
}

message Transport {
	int32 timestamp = 1;
	string from_uid = 2;
	string to_uid = 3;
	string seq_id = 4;
	int32 cur_idx = 5; // from 0, range in [0, total_cnt-1]
	int32 total_cnt = 6; // -1 means the sse is end
	TransportDataType data_type = 7;
	bytes data = 8; // encrypted data
}

message Request {
	string url = 1;
	string method = 2;
	string headers_json = 3;
	optional bytes body = 4;
}

message Response {
	string url = 1;
	int32 status = 2;
	string headers_json = 3;
	bytes body = 4;
}

message TCPConnect {
	string host = 1;
	int32 port = 2;
}

enum ControlDataType {
	HEARTBEAT = 0;
	PRINT = 1;
	EXIT = 2;
	QUERY_CLIENTS = 3;
	RETRIEVE_PKG = 4;
	HISTORY_CLIENT = 5; //The history package of client to inform server to resend
}

message Control {
	ControlDataType data_type = 1;
	string message = 2;
}